file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)	
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)	
add_executable(Output_Visualizer ${cppfiles} ${hppfiles})
target_link_libraries(Output_Visualizer ${libtcmalloc} ${antareslibs} ${iolibs} Scenario_Manager Core Routing Visual_Traffic_Simulator)
set_target_properties(Output_Visualizer PROPERTIES FOLDER apps)