file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)	
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)	
add_executable(Network_Validator ${cppfiles} ${hppfiles})
target_link_libraries(Network_Validator ${libtcmalloc} ${iolibs} Scenario_Manager Core Routing)
set_target_properties(Network_Validator PROPERTIES FOLDER apps)