file(GLOB_RECURSE hppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
add_executable(Core_Tests ${cppfiles} ${hppfiles})
target_link_libraries(Core_Tests ${GTEST_LIBRARY} ${libtcmalloc} Core)
set_target_properties(Core_Tests PROPERTIES FOLDER tests)
